--- a/css/main.scss
+++ b/css/main.scss
@@ -250,12 +250,56 @@ $menu-bar-spacing: $menu-width / 5;
 
 	.squares {
 		margin-top: 40px;
+		display: flex;
+		flex-direction: row;
+		cursor: pointer;
+		.r-more {
+			z-index: 2;
+			div {
+				position: absolute;
+				margin: -30px 0px 0px 20px;
+				width: 0%;	
+				height:1px;
+				background-color: #000000;
+				
+			}
+			.line {
+				width: 0%;
+				transition: all 400ms ease;
+			}
+			p {
+				position: absolute;
+				font-size: 18px;
+				font-weight: 300;
+				margin-top: -45px;
+				margin-left: 30px;
+				opacity: 0%;
+				transition: all 300ms ease;
+				transition-delay: 400ms;
+			}
+			&:hover {
+
+				div {
+					width: 10%
+				}
+
+				.line {
+					animation: burger-hover 1s infinite ease-in-out alternate forwards 400ms;
+				}
+				p {
+					opacity: 100%;
+					transform: translate(0px, -10px);
+				}
+
+			}
+
+		}
 		img {
-			width: 22%;
+			width: 70%;
 			border: 1px solid #000000;
 		}
 		.left {
-			margin-left: 15%
+			margin-left: 1%
 		}
 	}
 
