--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,15 @@ body {
           box-sizing: border-box;
 }
 
+body img {
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 header {
   position: relative;
   display: -webkit-box;
@@ -240,6 +249,7 @@ header {
   font-weight: 800;
   font-family: roboto, arial, helvetica;
   margin-bottom: -60px;
+  line-height: 1.3;
 }
 
 .intro p {
@@ -298,6 +308,7 @@ header {
 
 .last-proj-container .last-proj h2 {
   font-weight: 800;
+  font-size: 40px;
 }
 
 .last-proj-container .last-proj svg {
@@ -314,10 +325,15 @@ header {
       -ms-flex-direction: row;
           flex-direction: row;
   cursor: pointer;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .last-proj-container .squares .r-more {
   z-index: 2;
+  width: 30%;
 }
 
 .last-proj-container .squares .r-more div {
@@ -363,11 +379,7 @@ header {
 }
 
 .last-proj-container .squares img {
-  width: 70%;
+  width: 100%;
   border: 1px solid #000000;
-}
-
-.last-proj-container .squares .left {
-  margin-left: 1%;
 }
 /*# sourceMappingURL=main.css.map */
