--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,16 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	box-sizing: border-box;
+
+	img {  
+		user-drag: none;  
+		user-select: none;
+		-moz-user-select: none;
+		-webkit-user-drag: none;
+		-webkit-user-select: none;
+		-ms-user-select: none;
+	 }
+
 }
 
 header {
@@ -201,6 +211,7 @@ $menu-bar-spacing: $menu-width / 5;
 		font-weight: 800;
 		font-family: roboto, arial, helvetica;
 		margin-bottom: -60px;
+		line-height: 1.3;
           
 	}
 	p {
@@ -241,6 +252,7 @@ $menu-bar-spacing: $menu-width / 5;
 		align-items: center;
 		h2 {
 			font-weight: 800;
+			font-size:40px;
 		}
 		svg {
 			margin-left: 20px;
@@ -253,8 +265,11 @@ $menu-bar-spacing: $menu-width / 5;
 		display: flex;
 		flex-direction: row;
 		cursor: pointer;
+		flex-wrap: wrap;
+		justify-content:space-around;
 		.r-more {
 			z-index: 2;
+			width: 30%;
 			div {
 				position: absolute;
 				margin: -30px 0px 0px 20px;
@@ -295,11 +310,12 @@ $menu-bar-spacing: $menu-width / 5;
 
 		}
 		img {
-			width: 70%;
+			width: 100%;
 			border: 1px solid #000000;
 		}
+		
 		.left {
-			margin-left: 1%
+			// margin-left: 50%
 		}
 	}
 
