--- a/css/main.scss
+++ b/css/main.scss
@@ -243,6 +243,27 @@ $menu-bar-spacing: $menu-width / 5;
 	}
 }
 
+.verticaltext {
+	position: absolute;
+	left: 95%;
+	margin-top: -120px;
+	
+	svg {
+	margin-left: 8px;
+	}
+	a {
+		display:flex;
+		flex-direction: row;
+		margin: 50px auto;
+		text-decoration: none;
+		color: #000000;
+		writing-mode: vertical-rl;
+		text-transform: lowercase;
+		font-weight: 300;
+	}
+}
+
+
 .last-proj-container {
 	margin: 10rem auto;
 
