--- a/css/main.scss
+++ b/css/main.scss
@@ -361,7 +361,7 @@ $menu-bar-spacing: $menu-width / 5;
 }
 
 .dropme {
-	margin: 5% 10%;
+	margin: 5% 10% ;
 }
 
 .work-with-us {
@@ -392,27 +392,76 @@ $menu-bar-spacing: $menu-width / 5;
 
 .form {
 	grid-area: form;
-	padding: 0px 50px;
+	padding: 40px 50px;
 
-	form {
-		margin-top: 50px;
-	}
+	
 
 	label,
 	input,
-	textarea,
-	button {
+	textarea{
 		display: block;
 		outline: none;
 		font-size: 14px;
 		width: 80%;
 	}
+	
+	button{
+		background: none;
+		border:0;
+		color: rgb(0, 0, 0);	
+		font-size: 14px;
+		position: relative;
+		transition:  all .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+		cursor: pointer;
+		display: block;
+		font-weight: 400;
+	  }
+	  
+	  button::after,
+	  button::before{
+		content: "";
+		position: absolute;
+		top: 50%;
+		right: 0px;
+		  opacity: 0;
+		transition:         all .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+	  }
+	  
+	  button::after{
+		  width: 30px;
+		  height: 1px;
+		  background: rgb(0, 0, 0);
+		  transform: translateX(-3px);
+		  margin-top: 0px;
+	  }
+	  
+	  button::before{
+		  content: "";
+		  transform: rotate(-135deg) translateX(50%);
+		  width: 11px;
+		  height: 11px;
+		  background: transparent;
+		  border-left: 1px solid rgb(0, 0, 0);
+		  border-bottom: 1px solid rgb(0, 0, 0);
+		margin-top: -1px;
+	  }
+	  
+	  
+	  button:hover{
+		padding: 0px 60px 0px 0px;
+	  }
+	  
+	  button:hover::after,
+	  button:hover::before{
+		opacity: 1;
+		right: 15px;
+	  }
 
 	label {
 		border: 0;
 		height: 5px;
 		line-height: 10px;
-		font-weight: 300;
+		font-weight: 400;
 	}
 
 	input {
@@ -440,8 +489,5 @@ $menu-bar-spacing: $menu-width / 5;
 
 	}
 
-	button {
-		
-
-	}
+	
 }
