--- a/css/main.css
+++ b/css/main.css
@@ -448,28 +448,78 @@ header {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: form;
-  padding: 0px 50px;
-}
-
-.form form {
-  margin-top: 50px;
+  padding: 40px 50px;
 }
 
 .form label,
 .form input,
-.form textarea,
-.form button {
+.form textarea {
   display: block;
   outline: none;
   font-size: 14px;
   width: 80%;
 }
 
+.form button {
+  background: none;
+  border: 0;
+  color: black;
+  font-size: 14px;
+  position: relative;
+  -webkit-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  cursor: pointer;
+  display: block;
+  font-weight: 400;
+}
+
+.form button::after,
+.form button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  opacity: 0;
+  -webkit-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.form button::after {
+  width: 30px;
+  height: 1px;
+  background: black;
+  -webkit-transform: translateX(-3px);
+          transform: translateX(-3px);
+  margin-top: 0px;
+}
+
+.form button::before {
+  content: "";
+  -webkit-transform: rotate(-135deg) translateX(50%);
+          transform: rotate(-135deg) translateX(50%);
+  width: 11px;
+  height: 11px;
+  background: transparent;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  margin-top: -1px;
+}
+
+.form button:hover {
+  padding: 0px 60px 0px 0px;
+}
+
+.form button:hover::after,
+.form button:hover::before {
+  opacity: 1;
+  right: 15px;
+}
+
 .form label {
   border: 0;
   height: 5px;
   line-height: 10px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .form input {
