--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	margin: 0;
 	padding: 40px 60px;
@@ -417,45 +421,45 @@ $menu-bar-spacing: $menu-width / 5;
 		font-weight: 400;
 	  }
 	  
-	  button::after,
-	  button::before{
-		content: "";
-		position: absolute;
-		top: 50%;
-		right: 0px;
-		  opacity: 0;
-		transition:         all .4s cubic-bezier(0.645, 0.045, 0.355, 1);
-	  }
+	//   button::after,
+	//   button::before{
+	// 	content: "";
+	// 	position: absolute;
+	// 	top: 50%;
+	// 	right: 0px;
+	// 	  opacity: 0;
+	// 	transition:         all .4s cubic-bezier(0.645, 0.045, 0.355, 1);
+	//   }
 	  
-	  button::after{
-		  width: 30px;
-		  height: 1px;
-		  background: rgb(0, 0, 0);
-		  transform: translateX(-3px);
-		  margin-top: 0px;
-	  }
+	//   button::after{
+	// 	  width: 30px;
+	// 	  height: 1px;
+	// 	  background: rgb(0, 0, 0);
+	// 	  transform: translateX(-3px);
+	// 	  margin-top: 0px;
+	//   }
 	  
-	  button::before{
-		  content: "";
-		  transform: rotate(-135deg) translateX(50%);
-		  width: 11px;
-		  height: 11px;
-		  background: transparent;
-		  border-left: 1px solid rgb(0, 0, 0);
-		  border-bottom: 1px solid rgb(0, 0, 0);
-		margin-top: -1px;
-	  }
+	//   button::before{
+	// 	  content: "";
+	// 	  transform: rotate(-135deg) translateX(50%);
+	// 	  width: 11px;
+	// 	  height: 11px;
+	// 	  background: transparent;
+	// 	  border-left: 1px solid rgb(0, 0, 0);
+	// 	  border-bottom: 1px solid rgb(0, 0, 0);
+	// 	margin-top: -1px;
+	//   }
 	  
 	  
-	  button:hover{
-		padding: 0px 60px 0px 0px;
-	  }
+	//   button:hover{
+	// 	padding: 0px 60px 0px 0px;
+	//   }
 	  
-	  button:hover::after,
-	  button:hover::before{
-		opacity: 1;
-		right: 15px;
-	  }
+	//   button:hover::after,
+	//   button:hover::before{
+	// 	opacity: 1;
+	// 	right: 15px;
+	//   }
 
 	label {
 		border: 0;
@@ -493,8 +497,43 @@ $menu-bar-spacing: $menu-width / 5;
 }
 
 footer {
+	
+	.footer-container {
+	display:flex;
+	flex-direction: row;
+	justify-content:space-between;
+	// align-content: space-between;
 	margin: 3% 0px 2% ;
+
+		.links {
+			list-style: none;
+			display: flex;
+			
+			a {
+				text-decoration: none;
+				margin-left: 15px;
+				font-weight: 400;
+				list-style: none;
+				color:#000000;
+				
+				&:hover {
+					color: #808080;
+				}
+			}
+		}
+	
+	}
+	
+	a {
+		text-decoration: none;
+		color: #000000;
+
+		&:hover {
+			color: #808080;
+		}
+	}
 	i {
-		margin-right: 10px;
+		margin-right: 15px;
+		cursor: pointer;
 	}
 }
