--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 html {
 	scroll-behavior: smooth;
+	cursor: none;
 }
 
 body {
@@ -204,7 +205,6 @@ $menu-bar-spacing: $menu-width / 5;
 	color: rgb(255, 255, 255);
 	text-decoration: none;
 }
-
 
 
 
