--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 html {
   scroll-behavior: smooth;
   cursor: none;
+  background: #fff;
 }
 
 body {
   margin: 0;
   padding: 40px 60px;
   height: 100vh;
-  background-color: #FFF;
   font-family: roboto, arial, helvetica;
   font-size: 1rem;
   line-height: 1.2;
@@ -64,6 +64,45 @@ header {
   background-color: #000000;
   border-radius: 50px;
   border: 9px none #ffffff;
+}
+
+.inner-cursor {
+  z-index: 999;
+  position: fixed;
+  left: 10px;
+  width: 10px;
+  height: 10px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  mix-blend-mode: difference;
+  background: #4377e9;
+  border-radius: 50%;
+  pointer-events: none;
+  -webkit-transition: width 0.5s, height 0.5s;
+  transition: width 0.5s, height 0.5s;
+}
+
+.inner-cursor.grow {
+  width: 25px;
+  height: 25px;
+  -webkit-transition: width 0.5s, height 0.5s;
+  transition: width 0.5s, height 0.5s;
+}
+
+.outer-cursor {
+  z-index: 999;
+  position: fixed;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border: 1px solid #4f51f1;
+  mix-blend-mode: difference;
+  border-radius: 50%;
+  pointer-events: none;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
 
 .container {
@@ -242,29 +281,6 @@ header {
   font-weight: 300 !important;
   color: white;
   text-decoration: none;
-}
-
-#hover-this {
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-#hover-this:hover ~ .cursor {
-  -webkit-transform: translate(-50%, -50%) scale(8);
-          transform: translate(-50%, -50%) scale(8);
-}
-
-.cursor {
-  pointer-events: none;
-  position: fixed;
-  padding: 0.3rem;
-  background-color: #000000;
-  border-radius: 50%;
-  mix-blend-mode: difference;
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
 .intro {
