--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ header {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   mix-blend-mode: difference;
-  background: #4377e9;
+  background: #616161;
   border-radius: 50%;
   pointer-events: none;
   -webkit-transition: width 0.5s, height 0.5s;
@@ -97,7 +97,7 @@ header {
   height: 25px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  border: 1px solid #4f51f1;
+  border: 1px solid #555555;
   mix-blend-mode: difference;
   border-radius: 50%;
   pointer-events: none;
@@ -186,7 +186,6 @@ header {
   border-radius: 50%;
   background-color: #000000;
   border: 0;
-  cursor: pointer;
   position: absolute;
   right: 0;
   top: -18px;
@@ -400,7 +399,6 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  cursor: pointer;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
@@ -512,7 +510,6 @@ header {
   position: relative;
   -webkit-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  cursor: pointer;
   display: block;
   font-weight: 400;
 }
@@ -592,6 +589,5 @@ footer a:hover {
 
 footer i {
   margin-right: 15px;
-  cursor: pointer;
 }
 /*# sourceMappingURL=main.css.map */
