--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ header {
   text-align: center;
 }
 
-.menu {
+.nav-button .menu {
   display: inline-block;
   width: 20px;
   position: relative;
@@ -119,7 +119,7 @@ header {
   transition: transform ease .2s, -webkit-transform ease .2s;
 }
 
-.menu:before {
+.nav-button .menu:before {
   content: '';
   position: absolute;
   left: 50%;
@@ -138,7 +138,7 @@ header {
           transition-delay: .175s;
 }
 
-.menu span {
+.nav-button .menu span {
   background: black;
   display: block;
   height: 2px;
@@ -150,18 +150,18 @@ header {
           transition-delay: 0.2s;
 }
 
-.menu span:last-child {
+.nav-button .menu span:last-child {
   width: 70%;
 }
 
-.menu.active {
+.nav-button.active a {
   -webkit-transition-delay: .225s;
           transition-delay: .225s;
   -webkit-transform: rotateZ(45deg);
           transform: rotateZ(45deg);
 }
 
-.menu.active:before {
+.nav-button.active a:before {
   -webkit-transition-delay: .025s;
           transition-delay: .025s;
   -webkit-transform: scale(1);
@@ -169,11 +169,11 @@ header {
   background: #000000;
 }
 
-.menu.active span {
+.nav-button.active a span {
   background: #000000;
 }
 
-.menu.active span:nth-child(1), .menu.active span:nth-child(3) {
+.nav-button.active a span:nth-child(1), .nav-button.active a span:nth-child(3) {
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
   width: 0;
