--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 html {
   scroll-behavior: smooth;
   cursor: none;
-  background: #fff;
+  background: #F0F0F3;
 }
 
 body {
   margin: 0;
   padding: 40px 60px;
   height: 100vh;
-  font-family: roboto, arial, helvetica;
+  font-family: 'Lexend Deca', sans-serif;
   font-size: 1rem;
   line-height: 1.2;
   display: -webkit-box;
@@ -276,7 +276,7 @@ header {
 
 .header__menu-item a {
   cursor: none;
-  font-family: "Trud Type", Helvetica, sans-serif;
+  font-family: 'DM Serif Text', serif;
   letter-spacing: -4px;
   font-weight: 300 !important;
   color: white;
@@ -291,7 +291,7 @@ header {
   top: 0%;
   font-size: 3rem;
   font-weight: 800;
-  font-family: roboto, arial, helvetica;
+  font-family: 'DM Serif Text', serif;
   margin-bottom: -60px;
   line-height: 1.3;
 }
@@ -300,7 +300,7 @@ header {
   margin-top: 5rem;
   font-size: 1.5rem;
   font-weight: 300;
-  font-family: roboto, arial, helvetica;
+  font-family: 'Lexend Deca', sans-serif;
 }
 
 .presentation {
@@ -322,7 +322,7 @@ header {
 }
 
 .presentation h1 {
-  font-family: roboto, arial, helvetica;
+  font-family: 'DM Serif Text', serif;
   font-size: 3rem;
   font-weight: 200;
   margin-bottom: -15px;
@@ -359,6 +359,7 @@ header {
           writing-mode: vertical-rl;
   text-transform: lowercase;
   font-weight: 300;
+  font-family: 'DM Serif Text', serif;
 }
 
 .verticaltext a:hover {
@@ -383,6 +384,7 @@ header {
 }
 
 .last-proj-container .last-proj h2 {
+  font-family: 'DM Serif Text', serif;
   font-weight: 800;
   font-size: 40px;
 }
@@ -461,7 +463,7 @@ header {
 
 .last-proj-container .squares img {
   width: 100%;
-  border: 1px solid #000000;
+  drop-shadow: -8px -8px 24px 0 #FFFFFF 8px 8px 24px 0 #AEAEC0 40%;
 }
 
 .dropme {
@@ -485,6 +487,7 @@ header {
 .work-with-us h1 {
   font-size: 64px;
   font-weight: 200;
+  font-family: 'DM Serif Text', serif;
 }
 
 .work-with-us .drop svg {
@@ -553,7 +556,9 @@ header {
   line-height: 38px;
   overflow: hidden;
   background: transparent;
-  border: 1px solid #000;
+  border: #000;
+  border-width: 0px 0px 1px 0px;
+  border-style: none none solid none;
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
   text-align: left;
@@ -647,6 +652,7 @@ footer .footer-container .links a {
   font-weight: 400;
   list-style: none;
   color: #000000;
+  font-family: 'DM Serif Text';
 }
 
 footer .footer-container .links a:hover {
